iml-services/iml-device/src/snapshots/iml_device__virtual_device__tests__full_oss_test_oss2.local_0.snap
---
source: iml-services/iml-device/src/virtual_device.rs
expression: c_serde
---
{
  "ScsiDevice": {
    "children": [
      {
        "Mpath": {
          "children": [
            {
              "Zpool": {
                "children": [
                  {
                    "Dataset": {
                      "guid": 772293619696884272,
                      "kind": "filesystem",
                      "mount": null,
                      "name": "ost6/ost6",
                      "props": [
                        {
                          "name": "name",
                          "value": "ost6/ost6"
                        },
                        {
                          "name": "type",
                          "value": "filesystem"
                        },
                        {
                          "name": "creation",
                          "value": "1587638496"
                        },
                        {
                          "name": "used",
                          "value": "3620352"
                        },
                        {
                          "name": "available",
                          "value": "5164694016"
                        },
                        {
                          "name": "referenced",
                          "value": "3620352"
                        },
                        {
                          "name": "compressratio",
                          "value": "1.00x"
                        },
                        {
                          "name": "mounted",
                          "value": "no"
                        },
                        {
                          "name": "quota",
                          "value": "0"
                        },
                        {
                          "name": "reservation",
                          "value": "0"
                        },
                        {
                          "name": "recordsize",
                          "value": "1048576"
                        },
                        {
                          "name": "mountpoint",
                          "value": "/ost6/ost6"
                        },
                        {
                          "name": "sharenfs",
                          "value": "off"
                        },
                        {
                          "name": "checksum",
                          "value": "on"
                        },
                        {
                          "name": "compression",
                          "value": "off"
                        },
                        {
                          "name": "atime",
                          "value": "on"
                        },
                        {
                          "name": "devices",
                          "value": "on"
                        },
                        {
                          "name": "exec",
                          "value": "on"
                        },
                        {
                          "name": "setuid",
                          "value": "on"
                        },
                        {
                          "name": "readonly",
                          "value": "off"
                        },
                        {
                          "name": "zoned",
                          "value": "off"
                        },
                        {
                          "name": "snapdir",
                          "value": "hidden"
                        },
                        {
                          "name": "aclinherit",
                          "value": "restricted"
                        },
                        {
                          "name": "createtxg",
                          "value": "11"
                        },
                        {
                          "name": "canmount",
                          "value": "off"
                        },
                        {
                          "name": "xattr",
                          "value": "sa"
                        },
                        {
                          "name": "copies",
                          "value": "1"
                        },
                        {
                          "name": "version",
                          "value": "5"
                        },
                        {
                          "name": "utf8only",
                          "value": "off"
                        },
                        {
                          "name": "normalization",
                          "value": "none"
                        },
                        {
                          "name": "casesensitivity",
                          "value": "sensitive"
                        },
                        {
                          "name": "vscan",
                          "value": "off"
                        },
                        {
                          "name": "nbmand",
                          "value": "off"
                        },
                        {
                          "name": "sharesmb",
                          "value": "off"
                        },
                        {
                          "name": "refquota",
                          "value": "0"
                        },
                        {
                          "name": "refreservation",
                          "value": "0"
                        },
                        {
                          "name": "guid",
                          "value": "772293619696884272"
                        },
                        {
                          "name": "primarycache",
                          "value": "all"
                        },
                        {
                          "name": "secondarycache",
                          "value": "all"
                        },
                        {
                          "name": "usedbysnapshots",
                          "value": "0"
                        },
                        {
                          "name": "usedbydataset",
                          "value": "3620352"
                        },
                        {
                          "name": "usedbychildren",
                          "value": "0"
                        },
                        {
                          "name": "usedbyrefreservation",
                          "value": "0"
                        },
                        {
                          "name": "logbias",
                          "value": "latency"
                        },
                        {
                          "name": "dedup",
                          "value": "off"
                        },
                        {
                          "name": "mlslabel",
                          "value": "none"
                        },
                        {
                          "name": "sync",
                          "value": "standard"
                        },
                        {
                          "name": "dnodesize",
                          "value": "auto"
                        },
                        {
                          "name": "refcompressratio",
                          "value": "1.00x"
                        },
                        {
                          "name": "written",
                          "value": "3620352"
                        },
                        {
                          "name": "logicalused",
                          "value": "1829888"
                        },
                        {
                          "name": "logicalreferenced",
                          "value": "1829888"
                        },
                        {
                          "name": "volmode",
                          "value": "default"
                        },
                        {
                          "name": "filesystem_limit",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapshot_limit",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "filesystem_count",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapshot_count",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapdev",
                          "value": "hidden"
                        },
                        {
                          "name": "acltype",
                          "value": "off"
                        },
                        {
                          "name": "context",
                          "value": "none"
                        },
                        {
                          "name": "fscontext",
                          "value": "none"
                        },
                        {
                          "name": "defcontext",
                          "value": "none"
                        },
                        {
                          "name": "rootcontext",
                          "value": "none"
                        },
                        {
                          "name": "relatime",
                          "value": "off"
                        },
                        {
                          "name": "redundant_metadata",
                          "value": "all"
                        },
                        {
                          "name": "overlay",
                          "value": "off"
                        },
                        {
                          "name": "lustre:failover.node",
                          "value": "10.73.20.22@tcp"
                        },
                        {
                          "name": "lustre:version",
                          "value": "1"
                        },
                        {
                          "name": "lustre:fsname",
                          "value": "zfsmo"
                        },
                        {
                          "name": "lustre:index",
                          "value": "6"
                        },
                        {
                          "name": "lustre:mgsnode",
                          "value": "10.73.20.11@tcp:10.73.20.12@tcp"
                        },
                        {
                          "name": "lustre:flags",
                          "value": "34"
                        },
                        {
                          "name": "lustre:svname",
                          "value": "zfsmo-OST0006"
                        }
                      ]
                    }
                  }
                ],
                "guid": 417877859523008885,
                "health": "ONLINE",
                "mount": {
                  "fs_type": "zfs",
                  "opts": "rw,xattr,noacl",
                  "source": "ost6",
                  "target": "/ost6"
                },
                "name": "ost6",
                "props": [],
                "size": 5335154688,
                "state": "ACTIVE",
                "vdev": {
                  "Root": {
                    "cache": [],
                    "children": [
                      {
                        "Disk": {
                          "dev_id": "dm-uuid-mpath-36001405672b27cf380a49449d354890e",
                          "guid": 15053056041780868473,
                          "is_log": false,
                          "path": "/dev/mapper/mpathg",
                          "phys_path": null,
                          "state": "ONLINE",
                          "whole_disk": false
                        }
                      }
                    ],
                    "spares": []
                  }
                }
              }
            }
          ],
          "devpath": "/devices/virtual/block/dm-6",
          "dm_name": "mpathg",
          "filesystem_type": "zfs_member",
          "fs_label": "ost6",
          "fs_uuid": "417877859523008885",
          "major": "253",
          "minor": "6",
          "mount": null,
          "paths": [
            "/dev/mapper/mpathg",
            "/dev/disk/by-id/dm-name-mpathg",
            "/dev/disk/by-id/dm-uuid-mpath-36001405672b27cf380a49449d354890e",
            "/dev/disk/by-label/ost6",
            "/dev/disk/by-uuid/417877859523008885",
            "/dev/dm-6"
          ],
          "scsi80": "SLIO-ORG ost15           672b27cf-380a-4944-9d35-4890efbd2d51",
          "serial": "36001405672b27cf380a49449d354890e",
          "size": 5368709120
        }
      }
    ],
    "devpath": "/devices/platform/host4/session3/target4:0:0/4:0:0:14/block/sdn",
    "filesystem_type": "mpath_member",
    "fs_label": "ost6",
    "fs_uuid": "417877859523008885",
    "major": "8",
    "minor": "208",
    "mount": null,
    "paths": [
      "/dev/disk/by-id/scsi-36001405672b27cf380a49449d354890e",
      "/dev/disk/by-id/wwn-0x6001405672b27cf380a49449d354890e",
      "/dev/disk/by-path/fc---lun-14",
      "/dev/disk/by-path/ip-10.73.40.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:oss-lun-14",
      "/dev/disk/by-label/ost6",
      "/dev/disk/by-uuid/417877859523008885",
      "/dev/sdn"
    ],
    "scsi80": "SLIO-ORG ost15           672b27cf-380a-4944-9d35-4890efbd2d51",
    "serial": "36001405672b27cf380a49449d354890e",
    "size": 5368709120
  }
}
